# quizzical

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  acronyms.json  security-plus.json
.github/workflows/: publish.yml
decks/: security-plus-acronyms.json  security-plus-full.json  security-plus-ports.json
src/: main.rs
