[package]
name = "quizzical"
version = "0.4.0"
edition = "2021"
description = "Terminal quiz game for cert exam prep. Beat mode, combo scoring, burning fuse timer. Security+ deck included."
license = "MIT"
repository = "https://github.com/PR0CK0/quizzical"
keywords = ["quiz", "terminal", "tui", "comptia", "flashcards"]
categories = ["command-line-utilities", "games"]
readme = "README.md"

[dependencies]
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dirs-next = "2.0"
